--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
-<p style="text-align: center;"><a href="https://www.mit.edu/~amini/LICENSE.md"><img src="https://barrarchiverio.7m.pl/p/error/xp.png.php?icon=control_panel2&amp;style=xp&amp;bstyle=luna&amp;title=License&amp;text=%C2%A9+Spilleparadis+2023+%7C+MIT License&amp;b1=&amp;b2=&amp;b3=" width="221" height="83" /></a></p>
+<p style="text-align: center;"><a href="https://github.com/Spilleparadis/spill.is-a.dev/blob/main/LICENSE"><img src="https://barrarchiverio.7m.pl/p/error/xp.png.php?icon=control_panel2&amp;style=xp&amp;bstyle=luna&amp;title=License&amp;text=%C2%A9+Spilleparadis+2023+%7C+MIT License&amp;b1=&amp;b2=&amp;b3=" width="221" height="83" /></a></p>
 </div>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Young+Serif&display=swap');
